k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  namespace: ci-cd-demo
  labels:
    app: calculator
    tier: frontend-backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
        tier: frontend-backend
    spec:
      containers:
      - name: calculator
        image: ghcr.io/ceme-dc-se/ceme-dc-se-ci_cd_k8s_demo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /api/cluster/info
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/cluster/info
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 5
